[gd_scene load_steps=71 format=3 uid="uid://b1lyax7mlenna"]

[ext_resource type="Script" path="res://Scenes/Scripts/Player, weapons and collectables/PlayerMovement.gd" id="1_gyp3l"]
[ext_resource type="Texture2D" uid="uid://b51xnl5cbro81" path="res://Sprites/Characters and items/Player_Spritesheet_Rev1.png" id="2_fwmi3"]
[ext_resource type="Texture2D" uid="uid://br1wcmuv2tn76" path="res://Sprites/Characters and items/Player_Shadow.png" id="2_scy0a"]
[ext_resource type="Script" path="res://Scenes/Scripts/Player, weapons and collectables/Other/Hud.gd" id="3_ex22d"]
[ext_resource type="Texture2D" uid="uid://c1mdakkcixtlx" path="res://Sprites/Hud/health_bar_background.png" id="4_m550f"]
[ext_resource type="Texture2D" uid="uid://dme52gv7pug5i" path="res://Sprites/Hud/Health_Hearts_Spritesheet.png" id="5_c6u80"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsncw"]
size = Vector2(10.5815, 14.6551)

[sub_resource type="Animation" id="Animation_q5074"]
resource_name = "Down"
length = 0.666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Down"]
}

[sub_resource type="Animation" id="Animation_aftnv"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_yx4yv"]
length = 0.666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Left"]
}

[sub_resource type="Animation" id="Animation_1855l"]
resource_name = "Right"
length = 0.666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Right"]
}

[sub_resource type="Animation" id="Animation_gnios"]
length = 0.666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Up"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_85ajf"]
_data = {
"Down": SubResource("Animation_q5074"),
"Idle": SubResource("Animation_aftnv"),
"Left": SubResource("Animation_yx4yv"),
"Right": SubResource("Animation_1855l"),
"Up": SubResource("Animation_gnios")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_gggfj"]
atlas = ExtResource("2_fwmi3")
region = Rect2(0, 0, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xrar"]
atlas = ExtResource("2_fwmi3")
region = Rect2(18, 0, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4fso"]
atlas = ExtResource("2_fwmi3")
region = Rect2(36, 0, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_g86ed"]
atlas = ExtResource("2_fwmi3")
region = Rect2(54, 0, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_p26st"]
atlas = ExtResource("2_fwmi3")
region = Rect2(72, 0, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_atkd0"]
atlas = ExtResource("2_fwmi3")
region = Rect2(90, 0, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyh55"]
atlas = ExtResource("2_fwmi3")
region = Rect2(108, 0, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhdnh"]
atlas = ExtResource("2_fwmi3")
region = Rect2(126, 0, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdlwl"]
atlas = ExtResource("2_fwmi3")
region = Rect2(0, 0, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqss1"]
atlas = ExtResource("2_fwmi3")
region = Rect2(0, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_hssy6"]
atlas = ExtResource("2_fwmi3")
region = Rect2(18, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_o55oy"]
atlas = ExtResource("2_fwmi3")
region = Rect2(36, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqfn0"]
atlas = ExtResource("2_fwmi3")
region = Rect2(54, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3bmi"]
atlas = ExtResource("2_fwmi3")
region = Rect2(72, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1rir"]
atlas = ExtResource("2_fwmi3")
region = Rect2(90, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib5ie"]
atlas = ExtResource("2_fwmi3")
region = Rect2(108, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_r34bi"]
atlas = ExtResource("2_fwmi3")
region = Rect2(126, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hwtr"]
atlas = ExtResource("2_fwmi3")
region = Rect2(0, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rkkw"]
atlas = ExtResource("2_fwmi3")
region = Rect2(18, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_muq4t"]
atlas = ExtResource("2_fwmi3")
region = Rect2(36, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gnud"]
atlas = ExtResource("2_fwmi3")
region = Rect2(54, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdb44"]
atlas = ExtResource("2_fwmi3")
region = Rect2(72, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbqbf"]
atlas = ExtResource("2_fwmi3")
region = Rect2(90, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvlxv"]
atlas = ExtResource("2_fwmi3")
region = Rect2(108, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o1nq"]
atlas = ExtResource("2_fwmi3")
region = Rect2(126, 38, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaj6u"]
atlas = ExtResource("2_fwmi3")
region = Rect2(0, 76, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxkub"]
atlas = ExtResource("2_fwmi3")
region = Rect2(18, 76, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaix4"]
atlas = ExtResource("2_fwmi3")
region = Rect2(36, 76, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi3rm"]
atlas = ExtResource("2_fwmi3")
region = Rect2(54, 76, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_kst3f"]
atlas = ExtResource("2_fwmi3")
region = Rect2(72, 76, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_l74d3"]
atlas = ExtResource("2_fwmi3")
region = Rect2(90, 76, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgxtu"]
atlas = ExtResource("2_fwmi3")
region = Rect2(108, 76, 18, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5eik"]
atlas = ExtResource("2_fwmi3")
region = Rect2(126, 76, 18, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_ilyhk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gggfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xrar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4fso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g86ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p26st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atkd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyh55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhdnh")
}],
"loop": true,
"name": &"Down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdlwl")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqss1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hssy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o55oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqfn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3bmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1rir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib5ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r34bi")
}],
"loop": true,
"name": &"Left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hwtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rkkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muq4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gnud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdb44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbqbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvlxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o1nq")
}],
"loop": true,
"name": &"Right",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaj6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxkub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaix4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi3rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kst3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l74d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgxtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5eik")
}],
"loop": true,
"name": &"Up",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_btb0q"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 0, 184, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ycnb"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 8, 184, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep0hk"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 16, 184, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_t63mj"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 24, 184, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3kav"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 32, 184, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsjy1"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 40, 184, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy72o"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 48, 184, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3phe"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 56, 184, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_db1un"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 64, 184, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcxp2"]
atlas = ExtResource("4_m550f")
region = Rect2(0, 72, 184, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_3rvtn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btb0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ycnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep0hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t63mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3kav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsjy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy72o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3phe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db1un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcxp2")
}],
"loop": true,
"name": &"Bar_sprites",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jerv6"]
atlas = ExtResource("5_c6u80")
region = Rect2(150, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_xycef"]
atlas = ExtResource("5_c6u80")
region = Rect2(135, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rddv"]
atlas = ExtResource("5_c6u80")
region = Rect2(120, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uc2e"]
atlas = ExtResource("5_c6u80")
region = Rect2(105, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7bj6"]
atlas = ExtResource("5_c6u80")
region = Rect2(90, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_fndu0"]
atlas = ExtResource("5_c6u80")
region = Rect2(75, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j47i"]
atlas = ExtResource("5_c6u80")
region = Rect2(60, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_einm4"]
atlas = ExtResource("5_c6u80")
region = Rect2(45, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh21g"]
atlas = ExtResource("5_c6u80")
region = Rect2(30, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_skpj1"]
atlas = ExtResource("5_c6u80")
region = Rect2(15, 0, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_m27o4"]
atlas = ExtResource("5_c6u80")
region = Rect2(0, 0, 15, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_tnc7b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jerv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xycef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rddv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uc2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7bj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fndu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j47i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_einm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh21g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skpj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m27o4")
}],
"loop": true,
"name": &"Sprites",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 2
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("1_gyp3l")

[node name="PlayerShadow" type="Sprite2D" parent="."]
position = Vector2(0, 15)
texture = ExtResource("2_scy0a")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.49999)
scale = Vector2(1.51208, 1.16)
shape = SubResource("RectangleShape2D_qsncw")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Dash_Timer" type="Timer" parent="."]
wait_time = 1.75
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_85ajf")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ilyhk")
animation = &"Down"
autoplay = "Idle"

[node name="Hud" type="CanvasLayer" parent="."]
script = ExtResource("3_ex22d")

[node name="bar" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(260, 36)
scale = Vector2(2.8, 2.8)
sprite_frames = SubResource("SpriteFrames_3rvtn")
animation = &"Bar_sprites"

[node name="heart" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(29.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart2" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(71.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart3" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(113.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart4" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(155.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart5" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(197.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart6" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(239.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart7" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(281.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart8" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(323.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart9" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(365.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart10" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(407.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart11" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(449.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"

[node name="heart12" type="AnimatedSprite2D" parent="Hud"]
position = Vector2(491.5, 21)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tnc7b")
animation = &"Sprites"
